sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: value ++ is not a member of Int
				eff++;
                                   ^AlgBubbleSort1:15: error: not found: value break
			break;
                        ^