sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	while(true){
		var i : Int = 0
		var lgr : Int = getNombreValeurs();
		var eff : Int = 0;
		while(i <= lgr - 2) {
			if(plusPetit(i+1, i)){
				echange(i+1, i);
				eff++;
			}
			i = i+1
		}
		if(eff == 0)
			break;
	}
}
